--- a/package.json
+++ b/package.json
@@ -81,7 +81,11 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "googleapis": "^128.0.0",
+    "yt-dlp-exec": "^2.5.0",
+    "youtube-transcript-api": "^1.0.1",
+    "ytsr": "^3.8.4"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
@@ -104,4 +108,5 @@
     "tsx": "^4.19.1",
     "typescript": "^5.6.3"
   }
+  
 }
