--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "@radix-ui/react-tooltip": "^1.1.3",
     "@radix-ui/react-visually-hidden": "^1.1.0",
     "@vercel/analytics": "^1.3.1",
-    "@vercel/blob": "^0.24.1",
     "@vercel/postgres": "^0.10.0",
     "ai": "4.1.50",
     "bcrypt-ts": "^5.0.2",
@@ -81,11 +80,7 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0",
-    "zod": "^3.23.8",
-    "googleapis": "^128.0.0",
-    "yt-dlp-exec": "^2.5.0",
-    "youtube-transcript-api": "^1.0.1",
-    "ytsr": "^3.8.4"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
@@ -108,5 +103,4 @@
     "tsx": "^4.19.1",
     "typescript": "^5.6.3"
   }
-  
 }
